# ocsf-types-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
examples/: generate.rs
src/: lib.rs  ocsf_generated.rs
tests/: integration.rs
tests/data/: sample_device_inventory_info_missing_optional.json  sample_file_activity.json  sample_http_activity.json
