[package]
name = "ocsf-types"
version = "0.2.0"
edition = "2024"
description = "Strongly typed Rust structs for the OCSF (Open Cybersecurity Schema Framework)"
license = "MIT"
readme = "README.md"
keywords = ["ocsf", "security", "siem"]
categories = ["security", "parser-implementations", "data-structures"]
repository = "https://github.com/dmitrikaramazov/ocsf-types-rs"
documentation = "https://docs.rs/ocsf-types"

exclude = [
    "src/resolved.json",
    "ocsf-schema",
    ".github",
    ".gitignore",
    "tests",
]

[dependencies]
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.148"

[dev-dependencies]
anyhow = "1.0.100"
heck = "0.5.0"
proc-macro2 = "1.0.104"
quote = "1.0.42"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.148"
